[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0299401, 1 )
colors = PoolColorArray( 0, 0, 0, 0.52549, 0, 0, 0, 0.52549 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.15845
margin_right = -2.15845
script = ExtResource( 1 )

[node name="Modal" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 1, 1200 )
texture = SubResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 107.0
margin_right = 1920.0
margin_bottom = 222.0
theme = ExtResource( 2 )
text = "The Devil and Some Aliens 
Went down to Georgia"
align = 1

[node name="ResumeButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 277.25
margin_right = 1160.0
margin_bottom = 402.251
rect_pivot_offset = Vector2( 552.158, 227 )
theme = ExtResource( 2 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 626.652
margin_right = 1160.0
margin_bottom = 751.652
rect_pivot_offset = Vector2( 552.158, 227 )
theme = ExtResource( 2 )
text = "Quit"

[node name="MusicCheckButton" type="CheckButton" parent="."]
margin_left = 1005.0
margin_top = 444.304
margin_right = 1081.0
margin_bottom = 484.304
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="SoundCheckButton" type="CheckButton" parent="."]
margin_left = 1005.0
margin_top = 539.844
margin_right = 1081.0
margin_bottom = 579.844
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="MusicLabel" type="Label" parent="."]
margin_left = 820.456
margin_top = 451.809
margin_right = 987.456
margin_bottom = 506.809
theme = ExtResource( 2 )
text = "Music"

[node name="SoundLabel" type="Label" parent="."]
margin_left = 820.456
margin_top = 540.039
margin_right = 985.456
margin_bottom = 653.039
rect_pivot_offset = Vector2( -2222.8, -691.819 )
theme = ExtResource( 2 )
text = "Sound
"

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
