[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/devil.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/Blip_Select39.ogg" type="AudioStream" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0299401, 1 )
colors = PoolColorArray( 0, 0, 0, 0.52549, 0, 0, 0, 0.52549 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.15845
margin_right = -2.15845
script = ExtResource( 1 )

[node name="Modal" type="Sprite" parent="."]
position = Vector2( 958.493, 540 )
scale = Vector2( 1, 1200 )
texture = SubResource( 2 )

[node name="NewGameButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 365.0
margin_right = 1160.0
margin_bottom = 490.0
rect_pivot_offset = Vector2( 552.158, 227 )
theme = ExtResource( 2 )
text = "New Game"

[node name="ExitGameButton" type="Button" parent="."]
margin_left = 760.0
margin_top = 580.0
margin_right = 1160.0
margin_bottom = 705.0
rect_pivot_offset = Vector2( 552.158, 227 )
theme = ExtResource( 2 )
text = "Exit"

[node name="Label" type="Label" parent="."]
margin_top = 107.0
margin_right = 1920.0
margin_bottom = 222.0
theme = ExtResource( 2 )
text = "The Devil and Some Aliens 
Went down to Georgia"
align = 1

[node name="devil" type="Sprite" parent="."]
position = Vector2( 550, 475 )
scale = Vector2( -1, 1 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
